--- a/goal_prediction.ipynb
+++ b/goal_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'src.config' from '/home/deus/Documents/trajectory-prediction/src/config.py'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1058/1058 [00:16<00:00, 62.24it/s] \n"
+      "100%|██████████| 1058/1058 [00:16<00:00, 63.97it/s] \n"
      ]
     },
     {
@@ -55,8 +55,8 @@
      "output_type": "stream",
      "text": [
       "Dividing 580 human trajectories: 11 training, 569 eval, 0 test\n",
-      "train (2310, 40, 2) float64 (2310, 25) float32 (2310, 40, 2) float64\n",
-      "eval (245345, 40, 2) float64 (245345, 25) float32 (245345, 40, 2) float64\n"
+      "train (6670, 40, 2) float64 (6670, 25) float32 (6670, 40, 2) float64\n",
+      "eval (240985, 40, 2) float64 (240985, 25) float32 (240985, 40, 2) float64\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,17 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "before: (5000, 40, 2)\n",
-      "(5000, 40, 27)\n",
-      "MED: 0.042653963304803234\n",
-      "FDE: 0.0711275687600353\n"
+      "MED: 0.030914461425584034\n",
+      "FDE: 0.04430704503859379\n"
      ]
     }
    ],
@@ -126,21 +124,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MED: 0.054702254029737434\n",
-      "FDE: 0.10544148540413023\n"
+      "MED: 0.035027690295997796\n",
+      "FDE: 0.05504289714568437\n"
      ]
     }
    ],
    "source": [
     "# evaluate estimated goals\n",
     "m.metrics(input_path, ground_truth=ground_truth_path, goals=goals_estimation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length ADE distances 200000, ground truth shape (5000, 40, 2)\n",
+      "Length FDE distances 5000, ground truth shape (5000, 40, 2)\n",
+      "ADE: 0.04046657588548339\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(model_path)\n",
+    "reload(util)\n",
+    "m = None\n",
+    "m = model_path.ModelPath(uses_goal=False)\n",
+    "m.load('path_simple_lstm')\n",
+    "\n",
+    "# evaluate without goals\n",
+    "m.metrics_geometric(input_path, ground_truth=ground_truth_path)"
    ]
   }
  ],
