--- a/goal_prediction.ipynb
+++ b/goal_prediction.ipynb
@@ -47,7 +47,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1058/1058 [00:16<00:00, 63.97it/s] \n"
+      "100%|██████████| 1058/1058 [00:16<00:00, 63.68it/s] \n"
      ]
     },
     {
@@ -55,8 +55,8 @@
      "output_type": "stream",
      "text": [
       "Dividing 580 human trajectories: 11 training, 569 eval, 0 test\n",
-      "train (6670, 40, 2) float64 (6670, 25) float32 (6670, 40, 2) float64\n",
-      "eval (240985, 40, 2) float64 (240985, 25) float32 (240985, 40, 2) float64\n"
+      "train (8230, 40, 2) float64 (8230, 25) float32 (8230, 40, 2) float64\n",
+      "eval (239425, 40, 2) float64 (239425, 25) float32 (239425, 40, 2) float64\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,60 +105,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MED: 0.030914461425584034\n",
-      "FDE: 0.04430704503859379\n"
+      "ADE mean: 0.040339955726327224\n",
+      "FDE mean: 0.06548932208721907\n"
      ]
     }
    ],
    "source": [
     "# evaluate gt goals\n",
-    "m.metrics(input_path, ground_truth=ground_truth_path, goals=correct_goals)"
+    "m.metrics_geometric(input_path, ground_truth=ground_truth_path, goals=correct_goals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MED: 0.035027690295997796\n",
-      "FDE: 0.05504289714568437\n"
+      "ADE mean: 0.053968485189751315\n",
+      "FDE mean: 0.10524421373966326\n"
      ]
     }
    ],
    "source": [
     "# evaluate estimated goals\n",
-    "m.metrics(input_path, ground_truth=ground_truth_path, goals=goals_estimation)"
+    "m.metrics_geometric(input_path, ground_truth=ground_truth_path, goals=goals_estimation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length ADE distances 200000, ground truth shape (5000, 40, 2)\n",
-      "Length FDE distances 5000, ground truth shape (5000, 40, 2)\n",
-      "ADE: 0.04046657588548339\n"
+      "ADE mean: 0.05303977448530926\n",
+      "FDE mean: 0.1040919363988945\n"
      ]
     }
    ],
    "source": [
     "reload(model_path)\n",
-    "reload(util)\n",
     "m = None\n",
     "m = model_path.ModelPath(uses_goal=False)\n",
     "m.load('path_simple_lstm')\n",
