Cleanup of simple CNN

--- a/train_networks.ipynb
+++ b/train_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'src.config' from '/home/deus/Documents/trajectory-prediction/src/config.py'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,16 +49,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1224/1224 [00:17<00:00, 70.50it/s] \n"
+      "100%|██████████| 1224/1224 [00:17<00:00, 70.07it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1224 unique ids found. Generated 248762 sequences total from 697 trajectories.\n",
+      "Skipped 503 trajectories.\n",
+      "        353 too short\n",
+      "        150 frequency issues (like gaps)\n",
+      "    \n",
+      "Skipped 458 sequences (0.184%) because of abnormally high absolute value after normalization\n",
       "Dividing 697 human trajectories: 627 training, 70 eval, 0 test\n",
-      "train (225265, 40, 2) float64 (225265, 25) float32 (225265, 40, 2) float64\n",
-      "eval (23955, 40, 2) float64 (23955, 25) float32 (23955, 40, 2) float64\n"
+      "train (223934, 40, 2) float64 (223934, 25) float32 (223934, 40, 2) float64\n",
+      "eval (24828, 40, 2) float64 (24828, 25) float32 (24828, 40, 2) float64\n"
      ]
     }
    ],
@@ -359,6 +365,55 @@
     "m = model_path.ModelPath(uses_goal=True)\n",
     "m.train(models_path.simple_lstm(train_data), train_data, eval_data, train_goals=train_data[1], eval_goals=eval_data[1])\n",
     "m.save('path_simple_lstm_goal')\n",
+    "m = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "219/219 [==============================] - 1s 4ms/step - loss: 0.0047 - mean_absolute_error: 0.0412 - val_loss: 0.0030 - val_mean_absolute_error: 0.0346\n",
+      "Epoch 2/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0026 - mean_absolute_error: 0.0322 - val_loss: 0.0030 - val_mean_absolute_error: 0.0342\n",
+      "Epoch 3/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0026 - mean_absolute_error: 0.0319 - val_loss: 0.0030 - val_mean_absolute_error: 0.0342\n",
+      "Epoch 4/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0026 - mean_absolute_error: 0.0316 - val_loss: 0.0030 - val_mean_absolute_error: 0.0338\n",
+      "Epoch 5/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0025 - mean_absolute_error: 0.0314 - val_loss: 0.0029 - val_mean_absolute_error: 0.0336\n",
+      "Epoch 6/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0025 - mean_absolute_error: 0.0313 - val_loss: 0.0029 - val_mean_absolute_error: 0.0336\n",
+      "Epoch 7/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0025 - mean_absolute_error: 0.0311 - val_loss: 0.0029 - val_mean_absolute_error: 0.0333\n",
+      "Epoch 8/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0025 - mean_absolute_error: 0.0310 - val_loss: 0.0029 - val_mean_absolute_error: 0.0333\n",
+      "Epoch 9/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0025 - mean_absolute_error: 0.0310 - val_loss: 0.0029 - val_mean_absolute_error: 0.0338\n",
+      "Epoch 10/10\n",
+      "219/219 [==============================] - 1s 3ms/step - loss: 0.0025 - mean_absolute_error: 0.0309 - val_loss: 0.0029 - val_mean_absolute_error: 0.0332\n",
+      "INFO:tensorflow:Assets written to: weights/path_simple_cnn/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: weights/path_simple_cnn/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(models_path)\n",
+    "\n",
+    "m = model_path.ModelPath(uses_goal=False)\n",
+    "m.train(models_path.simple_cnn(train_data), train_data, eval_data, batch_size=256)\n",
+    "m.save('path_simple_cnn')\n",
     "m = None"
    ]
   }
